# rapina-poc-graphql

./: .env.example  Cargo.toml  PLAN.md  README.md  docker-compose.yml  mysql-schema.sql
src/: db.rs  handlers.rs  main.rs
src/schemas/: product.rs  root.rs  user.rs
